guardar cambios de carpetas

--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -3,4 +3,4 @@
   <p>&copy; 2025 LaVegaTech | <a href="/conditions" target="_blank">Políticas y Condiciones</a> | <a href="/warranty" target="_blank">Garantías</a></p>
 </footer>
 
-<script src="/js/showPass.js"></script>
+<script src="/js/utils/showPass.js"></script>
