--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include ('./partials/header.ejs') %>
 
-  <link rel="stylesheet" href="/css/toastify.css">
+  <link rel="stylesheet" href="/css/utils/toastify.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   
@@ -576,7 +576,7 @@ document.querySelector(".tablink").click();
         
 </body>
 
-<script src="/js/buttonComparison.js"></script>
+<script src="/js/utils/buttonComparison.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
 
