--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,20 +14,20 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
     <!-- Bootstrap -->
-    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/libs/bootstrap.min.css"/>
 
     <!-- Slick -->
-    <link type="text/css" rel="stylesheet" href="/css/slick.css"/>
-    <link type="text/css" rel="stylesheet" href="/css/slick-theme.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/libs/slick.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/libs/slick-theme.css"/>
 
     <!-- nouislider -->
-    <link type="text/css" rel="stylesheet" href="/css/nouislider.min.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/libs/nouislider.min.css"/>
 
     <!-- Font Awesome Icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <!-- Custom stlylesheet -->
-    <link type="text/css" rel="stylesheet" href="/css/style.css" />
+    <link type="text/css" rel="stylesheet" href="/css/libs/style.css" />
 
    <!-- <link rel="stylesheet" href="/zay/bootstrap.min.css">
     <link rel="stylesheet" href="/zay/templatemo.css">
