--- a/src/views/store/clients/contact.ejs
+++ b/src/views/store/clients/contact.ejs
@@ -1,9 +1,9 @@
-<%- include('../partials/header.ejs') %>
+<%- include('../../partials/header.ejs') %>
 
-<link type="text/css" rel="stylesheet" href="/css/contact.css"/>
-<link rel="stylesheet" href="/css/toastify.css">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<link type="text/css" rel="stylesheet" href="/css/store/contact.css"/>
+<link rel="stylesheet" href="/css/utils/toastify.css">
 
 <body class="body-contact">
 <div class="contactos-page">
@@ -125,7 +125,7 @@
   </script>
 <% } %>
   
-  <%- include('../partials/footer.ejs') %>
+  <%- include('../../partials/footer.ejs') %>
 
 </body>
 
