--- a/src/views/store/information/warranty.ejs
+++ b/src/views/store/information/warranty.ejs
@@ -1,7 +1,7 @@
-<%- include('../partials/header.ejs') %>
+<%- include('../../partials/header.ejs') %>
 
     <!-- Warranty -->
-    <link type="text/css" rel="stylesheet" href="/css/warranty.css" />
+    <link type="text/css" rel="stylesheet" href="/css/store/warranty.css" />
 
     <section class="contenido-garantia">
         <h2 class="subtitulo-garantias">garantías</h2>
@@ -11,4 +11,4 @@
         </div>
     </section>
 
-<%- include('../partials/footer.ejs') %>
+<%- include('../../partials/footer.ejs') %>
