--- a/src/views/store/profile/account.ejs
+++ b/src/views/store/profile/account.ejs
@@ -1,8 +1,8 @@
-<%- include('../partials/header.ejs') %>
+<%- include('../../partials/header.ejs') %>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="/css/toastify.css">
-    <link type="text/css" rel="stylesheet" href="/css/account.css"/>
+    <link rel="stylesheet" href="/css/utils/toastify.css">
+    <link type="text/css" rel="stylesheet" href="/css/store/account.css"/>
 
     <body>
       <div class="contenedor-account">
@@ -55,9 +55,9 @@
       </div>
     </body>
 
-      <script src="/js/userProfile.js" type="module"></script>
-      <script src="/js/showPass.js"></script>
+      <script src="/js/store/userProfile.js" type="module"></script>
+      <script src="/js/utils/showPass.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
       <script src="https://unpkg.com/feather-icons"></script>
 
-  <%- include('../partials/footer.ejs') %>
+  <%- include('../../partials/footer.ejs') %>
