--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -135,16 +135,16 @@
         <!-- /FOOTER -->
 
         <!-- jQuery Plugins -->
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
-        <script src="/js/slick.min.js"></script>
-        <script src="/js/nouislider.min.js"></script>
-        <script src="/js/main.js" type="module"></script>
-        <script src="/js/search.js"></script>
-        <script src="/js/cart.js" type="module"></script>
-        <script src="/js/cartPreview.js" type="module"></script>
-        <script src="/js/fav.js" type="module"></script>
-        <script src="/js/formatPrice.js"></script>
+        <script src="/js/store/libs/jquery.min.js"></script>
+        <script src="/js/store/libs/bootstrap.min.js"></script>
+        <script src="/js/store/libs/slick.min.js"></script>
+        <script src="/js/store/libs/nouislider.min.js"></script>
+        <script src="/js/store/libs/main.js" type="module"></script>
+        <script src="/js/store/clients/search.js"></script>
+        <script src="/js/cart/cart.js" type="module"></script>
+        <script src="/js/cart/cartPreview.js" type="module"></script>
+        <script src="/js/fav/fav.js" type="module"></script>
+        <script src="/js/utils/formatPrice.js"></script>
 
 </body>
 </html>
