--- a/src/views/store/clients/about.ejs
+++ b/src/views/store/clients/about.ejs
@@ -1,7 +1,7 @@
-<%- include('../partials/header.ejs', {req}) %>
+<%- include('../../partials/header.ejs', {req}) %>
 
  <!-- About -->
- <link type="text/css" rel="stylesheet" href="/css/about.css" />
+ <link type="text/css" rel="stylesheet" href="/css/store/about.css" />
  
 <!-- Open Banner -->
 <section class="fondo-exitoso py-5">
@@ -109,9 +109,8 @@
     </div>
 </section>
 
-<%- include('../partials/footer.ejs') %>
+<%- include('../../partials/footer.ejs') %>
 
-<!-- Incluir SweetAlert JS -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
 
 </body>
