--- a/src/views/store/clients/cart.ejs
+++ b/src/views/store/clients/cart.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header.ejs') %>
+<%- include('../../partials/header.ejs') %>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-    <link rel="stylesheet" href="/css/cart.css">
-    <link rel="stylesheet" href="/css/sweetalert2.css">
+    <link rel="stylesheet" href="/css/store/cart.css">
+    <link rel="stylesheet" href="/css/utils/sweetalert2.css">
 </head>
 
 <body>
@@ -111,9 +111,9 @@
 </div>
 <% } %>
 
-    <%- include('../partials/footer.ejs') %>
+    <%- include('../../partials/footer.ejs') %>
 
-    <script src="/js/cartView.js" type="module"></script>
+    <script src="/js/cart/cartView.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
