--- a/src/views/store/clients/comparison.ejs
+++ b/src/views/store/clients/comparison.ejs
@@ -1,10 +1,10 @@
-<%- include('../partials/header.ejs') %>
+<%- include('../../partials/header.ejs') %>
 
 
 <head>
-    <link rel="stylesheet" href="/css/comparison.css">
-    <link rel="stylesheet" href="/css/search.css">
-    <link rel="stylesheet" href="/css/toastify.css">
+    <link rel="stylesheet" href="/css/store/comparison.css">
+    <link rel="stylesheet" href="/css/store/search.css">
+    <link rel="stylesheet" href="/css/utils/toastify.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
@@ -42,11 +42,11 @@
     </div>
   </div>
 
-    <%- include('../partials/footer.ejs') %>
+    <%- include('../../partials/footer.ejs') %>
 
 </body>
 
-    <script src="/js/comparison.js" type="module"></script>
+    <script src="/js/store/comparison.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	  <script src="https://unpkg.com/feather-icons"></script>
 
