--- a/src/views/store/clients/fav.ejs
+++ b/src/views/store/clients/fav.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header.ejs') %>
+<%- include('../../partials/header.ejs') %>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-    <link rel="stylesheet" href="/css/toastify.css">
-    <link rel="stylesheet" href="/css/fav.css">
-    <link rel="stylesheet" href="/css/sweetalert2.css">
+    <link rel="stylesheet" href="/css/utils/toastify.css">
+    <link rel="stylesheet" href="/css/utils/sweetalert2.css">
+    <link rel="stylesheet" href="/css/store/fav.css">
 
 </head>
 
@@ -91,10 +91,10 @@
     </div>
 </div>
 
-    <%- include('../partials/footer.ejs') %>
+    <%- include('../../partials/footer.ejs') %>
     
 </body>
-    <script src="/js/favView.js" type="module"></script>
+    <script src="/js/fav/favView.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
