--- a/src/views/store/clients/product.ejs
+++ b/src/views/store/clients/product.ejs
@@ -1,8 +1,8 @@
-<%- include('../partials/header.ejs') %>	
+<%- include('../../partials/header.ejs') %>	
 
-<link rel="stylesheet" href="/css/spec.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-<link rel="stylesheet" href="/css/toastify.css">
+<link rel="stylesheet" href="/css/utils/toastify.css">
+<link rel="stylesheet" href="/css/store/spec.css">
 
 <!-- SECTION -->
 <div class="section">
@@ -449,13 +449,13 @@
 	</div>
 	<!-- /Section -->
 
-	<%- include('../partials/footer.ejs') %>
+	<%- include('../../partials/footer.ejs') %>
 
 	</body>
 	
-	<script src="/js/buttonComparison.js"></script>
-	<script src="/js/stockColor.js"></script>
-	<script src="/js/rating.js" type="module"></script>
+	<script src="/js/utils/buttonComparison.js"></script>
+	<script src="/js/store/clients/stockColor.js"></script>
+	<script src="/js/store/clients/rating.js" type="module"></script>
 	<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
 
