--- a/src/views/store/information/conditions.ejs
+++ b/src/views/store/information/conditions.ejs
@@ -1,7 +1,7 @@
-<%- include('../partials/header.ejs') %>
+<%- include('../../partials/header.ejs') %>
 
     <!-- Conditions -->
-    <link type="text/css" rel="stylesheet" href="/css/conditions.css" />
+    <link type="text/css" rel="stylesheet" href="/css/store/conditions.css" />
 
     <h1 class="titulo-principal">Políticas y Condiciones</h1>
 
@@ -121,4 +121,4 @@
             disputas, estas serán resueltas en los tribunales de La Vega, República Dominicana.</p>
     </section>
 
-    <%- include('../partials/footer.ejs') %>
+    <%- include('../../partials/footer.ejs') %>
