--- a/src/views/store/orders/order.ejs
+++ b/src/views/store/orders/order.ejs
@@ -1,8 +1,8 @@
-<%- include('../partials/header.ejs') %>
+<%- include('../../partials/header.ejs') %>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-<link rel="stylesheet" href="/css/toastify.css">
-<link rel="stylesheet" href="/css/error.css">
+<link rel="stylesheet" href="/css/utils/toastify.css">
+<link rel="stylesheet" href="/css/utils/error.css">
 
 	<!-- BREADCRUMB -->
 	<div id="breadcrumb" class="section">
@@ -176,13 +176,13 @@
 	</div>
 	<!-- /SECTION -->
 
-	<%- include('../partials/footer.ejs') %>
+	<%- include('../../partials/footer.ejs') %>
 
 	</body>
-    
+	
+    <script src="/js/store/order.js" type="module"></script>    
     <script src="https://www.paypal.com/sdk/js?client-id=Adxx8fzjTmAkgRKTLil8ciSgRYaYZxTnJf96IAsdJVAvE8-fW3Rx2hbrDZ5VC662O1So9fgvFOPZd5IG&currency=USD"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
-    <script src="/js/order.js" type="module"></script>
 
 	</html>
