--- a/src/views/store/orders/orderDetails.ejs
+++ b/src/views/store/orders/orderDetails.ejs
@@ -1,7 +1,7 @@
-<%- include('../partials/header.ejs') %>
+<%- include('../../partials/header.ejs') %>
 
 <html>
-<link rel="stylesheet" href="/css/orderDetails.css">
+<link rel="stylesheet" href="/css/store/orderDetails.css">
 </html>
 
 </head>
@@ -101,11 +101,11 @@
         <a href="/api/order/showOrders" class="btn-details no-in-pdf">Volver</a>
         </div>
 
-    <%- include('../partials/footer.ejs') %>
+    <%- include('../../partials/footer.ejs') %>
 
 </body>
 
-	<script src="/js/PDF.js"></script>
+	<script src="/js/utils/PDF.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
 </html>
