--- a/src/views/store/orders/showOrders.ejs
+++ b/src/views/store/orders/showOrders.ejs
@@ -1,7 +1,7 @@
-    <%- include('../partials/header.ejs') %> 
+    <%- include('../../partials/header.ejs') %> 
 
 <head>
-  <link rel="stylesheet" href="/css/orders.css">
+  <link rel="stylesheet" href="/css/store/orders.css">
 </head>
 
 <html>
@@ -47,7 +47,7 @@
         <% } %>
     </div>
 
-    <%- include('../partials/footer.ejs') %>
+    <%- include('../../partials/footer.ejs') %>
     
 </body>
 </html>
