Arreglando rutas de admin

--- a/src/views/admin/brandCategory.ejs
+++ b/src/views/admin/brandCategory.ejs
@@ -1,10 +1,10 @@
 <%- include('../admin/dashboard.ejs') %>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="/css/sweetAlertAdmin.css">
-    <link rel="stylesheet" href="/css/toastify.css">
-    <link rel="stylesheet" href="/css/adminTable.css">
-    <link rel="stylesheet" href="/css/error.css">
+    <link rel="stylesheet" href="/css/utils/sweetAlertAdmin.css">
+    <link rel="stylesheet" href="/css/utils/toastify.css">
+    <link rel="stylesheet" href="/css/admin/table.css">
+    <link rel="stylesheet" href="/css/utils/error.css">
 
     <div class="main-content">
         <header class="header">
@@ -154,7 +154,7 @@
 
     </body>
 
-    <script type="module" src="/js/adminMC.js"></script>
+    <script type="module" src="/js/admin/store/brandCategory.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
