--- a/src/views/admin/orderDetails.ejs
+++ b/src/views/admin/orderDetails.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles del Pedido</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="/css/adminOrderDetails.css">
+    <link rel="stylesheet" href="/css/admin/orderDetails.css">
 
 </head>
 <body>
@@ -107,6 +107,6 @@
 
 </body>
 
-	<script src="/js/PDF.js"></script>
+	<script src="/js/utils/PDF.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 </html>
