--- a/src/views/admin/sales.ejs
+++ b/src/views/admin/sales.ejs
@@ -1,6 +1,6 @@
 <%- include('../admin/dashboard.ejs') %>
 
-<link rel="stylesheet" href="/css/chart.css">
+<link rel="stylesheet" href="/css/admin/chart.css">
 
 <div class="grafico-contenedor">
   <label for="rangoSelect">Selecciona rango:</label>
@@ -26,5 +26,5 @@
   <canvas id="ventasChart"></canvas>
 </div>
 
-<script src="/js/chart.js"></script>
+<script src="/js/admin/store/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
