--- a/src/views/admin/specs.ejs
+++ b/src/views/admin/specs.ejs
@@ -1,12 +1,12 @@
 <%- include('../admin/dashboard.ejs') %>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-<link rel="stylesheet" href="/css/sweetAlertAdmin.css">
-<link rel="stylesheet" href="/css/toastify.css">
-<link rel="stylesheet" href="/css/adminTable.css">
-<link rel="stylesheet" href="/css/error.css">
-<link rel="stylesheet" href="/css/adminTabs.css">
-<link rel="stylesheet" href="/css/adminResult.css">
+<link rel="stylesheet" href="/css/utils/sweetAlertAdmin.css">
+<link rel="stylesheet" href="/css/utils/toastify.css">
+<link rel="stylesheet" href="/css/admin/table.css">
+<link rel="stylesheet" href="/css/utils/error.css">
+<link rel="stylesheet" href="/css/admin/tabs.css">
+<link rel="stylesheet" href="/css/admin/results.css">
 
 <div class="main-content">
     <header class="header">
@@ -754,18 +754,18 @@ input[type="checkbox"] {
   });
 </script>
 
-<script type="module" src="/js/adminScreen.js"></script>
-<script type="module" src="/js/adminCamera.js"></script>
-<script type="module" src="/js/adminCpu.js"></script>
-<script type="module" src="/js/adminGpu.js"></script>
-<script type="module" src="/js/adminBattery.js"></script>
-<script type="module" src="/js/adminConnectivity.js"></script>
-<script type="module" src="/js/adminConnectivity.js"></script>
-<script type="module" src="/js/adminDimensions.js"></script>
-<script type="module" src="/js/adminRAM.js"></script>
-<script type="module" src="/js/adminVariantRAM.js"></script>
-<script type="module" src="/js/adminStorage.js"></script>
-<script type="module" src="/js/adminVariantStorage.js"></script>
+<script type="module" src="/js/admin/specs/screen.js"></script>
+<script type="module" src="/js/admin/specs/camera.js"></script>
+<script type="module" src="/js/admin/specs/cpu.js"></script>
+<script type="module" src="/js/admin/specs/gpu.js"></script>
+<script type="module" src="/js/admin/specs/battery.js"></script>
+<script type="module" src="/js/admin/specs/connectivity.js"></script>
+<script type="module" src="/js/admin/specs/connectivity.js"></script>
+<script type="module" src="/js/admin/specs/dimensions.js"></script>
+<script type="module" src="/js/admin/specs/RAM.js"></script>
+<script type="module" src="/js/admin/specs/variantRAM.js"></script>
+<script type="module" src="/js/admin/specs/storage.js"></script>
+<script type="module" src="/js/admin/specs/variantStorage.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
