--- a/src/views/admin/users.ejs
+++ b/src/views/admin/users.ejs
@@ -1,7 +1,7 @@
 <%- include('../admin/dashboard.ejs') %>
 
-    <link rel="stylesheet" href="/css/adminTable.css">
-    <link rel="stylesheet" href="/css/state.css">
+    <link rel="stylesheet" href="/css/admin/table.css">
+    <link rel="stylesheet" href="/css/utils/state.css">
 
     <div class="main-content">
         <header class="header">
@@ -36,4 +36,4 @@
             </div>
         </main>
 
-        <script src="/js/adminUsers.js"></script>
+        <script src="/js/admin/store/users.js"></script>
