--- a/src/views/admin/variants.ejs
+++ b/src/views/admin/variants.ejs
@@ -1,11 +1,11 @@
 <%- include('../admin/dashboard.ejs') %>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-  <link rel="stylesheet" href="/css/sweetAlertAdmin.css">
-  <link rel="stylesheet" href="/css/toastify.css">
-  <link rel="stylesheet" href="/css/adminTable.css">
-  <link rel="stylesheet" href="/css/error.css">
-  <link rel="stylesheet" href="/css/adminResult.css">
+  <link rel="stylesheet" href="/css/utils/sweetAlertAdmin.css">
+  <link rel="stylesheet" href="/css/utils/toastify.css">
+  <link rel="stylesheet" href="/css/admin/table.css">
+  <link rel="stylesheet" href="/css/utils/error.css">
+  <link rel="stylesheet" href="/css/admin/results.css">
 
   <div class="main-content">
     <header class="header">
@@ -115,7 +115,7 @@
 }
   </style>
 
-  <script type="module" src="/js/adminVariant.js"></script>
+  <script type="module" src="/js/admin/store/variantsProducts.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script src="https://unpkg.com/feather-icons"></script>
