--- a/src/views/admin/device.ejs
+++ b/src/views/admin/device.ejs
@@ -1,12 +1,12 @@
 <%- include('../admin/dashboard.ejs') %>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-<link rel="stylesheet" href="/css/sweetAlertAdmin.css">
-<link rel="stylesheet" href="/css/toastify.css">
-<link rel="stylesheet" href="/css/adminTable.css">
-<link rel="stylesheet" href="/css/error.css">
-<link rel="stylesheet" href="/css/adminResult.css">
-<link rel="stylesheet" href="/css/specsResult.css">
+<link rel="stylesheet" href="/css/utils/sweetAlertAdmin.css">
+<link rel="stylesheet" href="/css/utils/toastify.css">
+<link rel="stylesheet" href="/css/admin/table.css">
+<link rel="stylesheet" href="/css/utils/error.css">
+<link rel="stylesheet" href="/css/admin/results.css">
+<link rel="stylesheet" href="/css/store/spec.css">
 
 <div class="main-content">
     <header class="header">
@@ -115,7 +115,7 @@
     </div>
 </div>
 
-<script type="module" src="/js/adminDevice.js"></script>
+<script type="module" src="/js/admin/specs/device.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
