--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LaVegaTech - Admin</title>
     <link rel="icon" type="image/png" href="/img/lavegatech-logo.png">
-    <link type="text/css" rel="stylesheet" href="/css/adminAuth.css" />
+    <link type="text/css" rel="stylesheet" href="/css/admin/auth.css" />
     <link type="text/css" rel="stylesheet" href="/css/error.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
