--- a/src/views/admin/orders.ejs
+++ b/src/views/admin/orders.ejs
@@ -2,8 +2,8 @@
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="/css/toastify.css">
-    <link rel="stylesheet" href="/css/adminOrders.css">
+    <link rel="stylesheet" href="/css/utils/toastify.css">
+    <link rel="stylesheet" href="/css/admin/orders.css">
 </head>
 
 <div class="main-content">
@@ -61,6 +61,6 @@
   </main>
 </div>
 
-<script type="module" src="/js/adminOrders.js"></script>
+<script type="module" src="/js/admin/store/orders.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
