--- a/src/views/admin/device.ejs
+++ b/src/views/admin/device.ejs
@@ -5,8 +5,7 @@
 <link rel="stylesheet" href="/css/utils/toastify.css">
 <link rel="stylesheet" href="/css/admin/table.css">
 <link rel="stylesheet" href="/css/utils/error.css">
-<link rel="stylesheet" href="/css/admin/results.css">
-<link rel="stylesheet" href="/css/store/spec.css">
+<link rel="stylesheet" href="/css/admin/specsResult.css">
 
 <div class="main-content">
     <header class="header">
