--- a/src/views/store/profile/account.ejs
+++ b/src/views/store/profile/account.ejs
@@ -55,7 +55,7 @@
       </div>
     </body>
 
-      <script src="/js/store/userProfile.js" type="module"></script>
+      <script src="/js/store/clients/userProfile.js" type="module"></script>
       <script src="/js/utils/showPass.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
       <script src="https://unpkg.com/feather-icons"></script>
