--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -78,7 +78,7 @@ document.querySelector(".tablink").click();
                                             <%= producto.categoria === 'moviles' ? 'Móviles' : producto.categoria.charAt(0).toUpperCase() + producto.categoria.slice(1) %>
                                         </p>
                                         <h3 class="product-name">
-                                                <%= producto.nombre %> <%= producto.ram %> + <%= producto.almacenamiento %>
+                                                <%= producto.nombre %> <%= producto.especificaciones %>
                                             </h3>
                                             <h4 class="product-price">
                                                 $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
@@ -152,7 +152,7 @@ document.querySelector(".tablink").click();
                                             <%= producto.categoria === 'smarttv' ? 'SmartTV' : producto.categoria.charAt(0).toUpperCase() + producto.categoria.slice(1) %>
                                         </p>
                                         <h3 class="product-name">
-                                                <%= producto.nombre %><%= producto.ram %> + <%= producto.almacenamiento %>
+                                                <%= producto.nombre %><%= producto.especificaciones %>
                                             </h3>
                                             <h4 class="product-price">
                                                 $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
@@ -375,7 +375,7 @@ document.querySelector(".tablink").click();
                                             <%= producto.categoria === 'tablets' ? 'Tablets' : producto.categoria.charAt(0).toUpperCase() + producto.categoria.slice(1) %>
                                         </p>
                                         <h3 class="product-name">
-                                                <%= producto.nombre %><%= producto.nombre %><%= producto.ram %><%= producto.almacenamiento %>
+                                                <%= producto.nombre %> <%= producto.especificaciones %>
                                             </h3>
                                             <h4 class="product-price">
                                                 $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
@@ -406,8 +406,6 @@ document.querySelector(".tablink").click();
                                                 <button class="add-to-compare" data-id="<%= producto.id %>"><i class="fa-solid fa-arrow-right-arrow-left"></i>
                                                 <span class="tooltipp">Comparar</span></button>
                                                 <% } %>
-
-                                            
                                         </div>
                                     </div>
                                     <div class="add-to-cart">
@@ -512,7 +510,7 @@ document.querySelector(".tablink").click();
                                                 <%= producto.categoria || 'Sin categoría' %>
                                             </p>
                                             <h3 class="product-name">
-                                                <%= producto.nombre %> <%= producto.ram %> + <%= producto.almacenamiento %>
+                                                <%= producto.nombre %> <%= producto.especificaciones %>
                                             </h3>
 
                                              <h4 class="product-price">
