--- a/src/views/store/orders/orderDetails.ejs
+++ b/src/views/store/orders/orderDetails.ejs
@@ -92,10 +92,10 @@
         </div>
         <div class="cancel-message">
             <p>
-                ¿Quieres cancelar tu pedido?
+                ¿Algún problema con tu pedido?
                 Por favor <strong>contáctanos</strong> a <a href="mailto:info@lavegatechgsrl.com">info@lavegatechgsrl.com</a> o al
                 teléfono
-                <a href="tel:+18091234567">+1 (809)-277-2371</a>.
+                <a href="tel:+18091234567">+1 (809)-277-2371</a>
             </p>
         </div>
         <a href="/api/order/showOrders" class="btn-details no-in-pdf">Volver</a>
