--- a/src/views/store/clients/store.ejs
+++ b/src/views/store/clients/store.ejs
@@ -179,7 +179,7 @@
 														</div>
 														<div class="product-body">
 															<p class="product-category"><%= producto.categoria %></p>
-															<h3 class="product-name"><%= producto.nombre %> <%= producto.ram %> + <%= producto.almacenamiento %></h3>
+															<h3 class="product-name"><%= producto.nombre %> <%= producto.especificaciones %></h3>
 															<h4 class="product-price">
 																$<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
 																<% if (producto.descuento > 0) { %>
