Estado de productos

--- a/src/views/admin/products.ejs
+++ b/src/views/admin/products.ejs
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="/css/utils/sweetAlertAdmin.css">
 <link rel="stylesheet" href="/css/admin/table.css">
 <link rel="stylesheet" href="/css/utils/error.css">
+<link rel="stylesheet" href="/css/utils/state.css">
+
 
     <div class="main-content">
         <header class="header">
@@ -37,6 +39,7 @@
                                 <th>Categoría</th>
                                 <th>Marca</th>
                                 <th>Fecha</th>
+                                <th>Estado</th>
                                 <th>Acciones</th>
                             </tr>
                         </thead>
