Impuestos en el catalogo

--- a/src/views/store/clients/product.ejs
+++ b/src/views/store/clients/product.ejs
@@ -58,12 +58,12 @@
 			</div>
 			<div>
 				<h3 class="product-price">
-				$<%= (Number(producto.precio) * (1 - (producto.descuento /
-				100))).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %>
-				<% if (producto.descuento> 0) { %>
-				<del class="product-old-price">$<%=Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></del>
+				$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+				<% if (producto.descuento > 0) { %>
+					<del class="product-old-price">$<%= Number(producto.precio / (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
 				<% } %>
 				</h3>
+
 				<span class="product-available">
 					<p id="stockDisponible">
 						Cantidad disponible: <% if (stocksPorColor) { %>
@@ -426,10 +426,10 @@
 											<%= producto.nombre %> <%= producto.especificaciones %>
 										</h3>
 									<h4 class="product-price">
-                                        $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
-                                        <% if (producto.descuento > 0) { %>
-                                        <del class="product-old-price">$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
-                                        <% } %>
+									$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+									<% if (producto.descuento > 0) { %>
+										<del class="product-old-price">$<%= Number(producto.precio / (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
+									<% } %>
                                     </h4></a>
 								</div>
 							</div>
