--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -81,11 +81,14 @@ document.querySelector(".tablink").click();
                                                 <%= producto.nombre %> <%= producto.especificaciones %>
                                             </h3>
                                             <h4 class="product-price">
-                                                $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
-                                                <% if (producto.descuento > 0) { %>
-                                                <del class="product-old-price">$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
-                                                <% } %>
-                                            </h4></a>
+                                            $<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                            <% if (producto.descuento > 0) { %>
+                                                <del class="product-old-price">
+                                                    $<%= Number(producto.precio / (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                                </del>
+                                            <% } %>
+                                        </h4>
+                                        </a>
                                         <div class="product-rating">
                                         <% for (let i = 1; i <= 5; i++) { %>
                                             <% if (i <= Math.floor(producto.averageRating)) { %>
@@ -155,11 +158,13 @@ document.querySelector(".tablink").click();
                                                 <%= producto.nombre %><%= producto.especificaciones %>
                                             </h3>
                                             <h4 class="product-price">
-                                                $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
-                                                <% if (producto.descuento > 0) { %>
-                                                <del class="product-old-price">$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
-                                                <% } %>
-                                            </h4></a>
+                                            $<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                            <% if (producto.descuento > 0) { %>
+                                                <del class="product-old-price">
+                                                    $<%= Number(producto.precio / (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                                </del>
+                                            <% } %>
+                                        </h4></a>
                                         <div class="product-rating">
                                         <% for (let i = 1; i <= 5; i++) { %>
                                             <% if (i <= Math.floor(producto.averageRating)) { %>
@@ -229,11 +234,13 @@ document.querySelector(".tablink").click();
                                                 <%= producto.nombre %>
                                             </h3>
                                             <h4 class="product-price">
-                                                $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
-                                                <% if (producto.descuento > 0) { %>
-                                                <del class="product-old-price">$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
-                                                <% } %>
-                                            </h4></a>
+                                            $<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                            <% if (producto.descuento > 0) { %>
+                                                <del class="product-old-price">
+                                                    $<%= Number(producto.precio / (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                                </del>
+                                            <% } %>
+                                        </h4></a>
                                         <div class="product-rating">
                                             <% for (let i = 1; i <= 5; i++) { %>
                                                 <% if (i <= Math.floor(producto.averageRating)) { %>
@@ -304,11 +311,13 @@ document.querySelector(".tablink").click();
                                                 <%= producto.nombre %>
                                             </h3>
                                             <h4 class="product-price">
-                                                $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
-                                                <% if (producto.descuento > 0) { %>
-                                                <del class="product-old-price">$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
-                                                <% } %>
-                                            </h4></a>
+                                            $<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                            <% if (producto.descuento > 0) { %>
+                                                <del class="product-old-price">
+                                                    $<%= Number(producto.precio / (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                                </del>
+                                            <% } %>
+                                        </h4></a>
                                         <div class="product-rating">
                                             <% for (let i = 1; i <= 5; i++) { %>
                                                 <% if (i <= Math.floor(producto.averageRating)) { %>
@@ -378,11 +387,13 @@ document.querySelector(".tablink").click();
                                                 <%= producto.nombre %> <%= producto.especificaciones %>
                                             </h3>
                                             <h4 class="product-price">
-                                                $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
-                                                <% if (producto.descuento > 0) { %>
-                                                <del class="product-old-price">$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
-                                                <% } %>
-                                            </h4></a>
+                                            $<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                            <% if (producto.descuento > 0) { %>
+                                                <del class="product-old-price">
+                                                    $<%= Number(producto.precio / (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                                </del>
+                                            <% } %>
+                                        </h4></a>
                                         <div class="product-rating">
                                             <% for (let i = 1; i <= 5; i++) { %>
                                                 <% if (i <= Math.floor(producto.averageRating)) { %>
@@ -491,17 +502,16 @@ document.querySelector(".tablink").click();
 
 <!-- Section -->
 <div class="section">
-    <!-- container -->
     <div class="container">
-        <!-- row -->
-         <div class="row"> 
+        <div class="row"> 
             <div class="col-md-12">
                 <div class="section-title text-center">
                     <h3 class="title">Descubre más opciones</h3>
                 </div>
             </div>
-            <% if (recomendados && recomendados.length> 0) { %>
-                <% recomendados.forEach(producto=> { %>
+
+            <% if (recomendados && recomendados.length > 0) { %>
+                <% recomendados.forEach(producto => { %>
                     <!-- product -->
                     <div class="col-md-3 col-xs-6">
                         <div class="product">
@@ -509,58 +519,65 @@ document.querySelector(".tablink").click();
                                 <a href="/product/<%= producto.id %>?color=<%= producto.color %>">
                                     <img src="<%= producto.imagen %>" alt="<%= producto.nombre %>">
                                     <div class="product-label">
-                                        <% if (producto.descuento> 0) { %>
+                                        <% if (producto.descuento > 0) { %>
                                             <span class="sale">-<%= producto.descuento %>%</span>
-                                            <% } %>
-                                            <% const fechaCreacion=new Date(producto.fecha); const hoy=new Date();
-                                            const diferenciaDias=(hoy - fechaCreacion) / (1000 * 60 * 60 * 24);
-                                            if (diferenciaDias <=30) { %>
-                                                <span class="new">Nuevo</span>
-                                                <% } %>
-                                            </div>
-                                        </div>
-                                        <div class="product-body">
-                                            <p class="product-category">
-                                                <%= producto.categoria || 'Sin categoría' %>
-                                            </p>
-                                            <h3 class="product-name">
-                                                <%= producto.nombre %> <%= producto.especificaciones %>
-                                            </h3>
+                                        <% } %>
 
-                                             <h4 class="product-price">
-                                                $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %>
-                                                <% if (producto.descuento> 0) { %>
-                                                    <del class="product-old-price">
-                                                        $<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
-                                                        <% } %>
-                                                    </h4></a>
-                                                    <div class="product-rating">
-                                                    <% for (let i = 1; i <= 5; i++) { %>
-                                                        <% if (i <= Math.floor(producto.averageRating)) { %>
-                                                            <i class="fa-solid fa-star"></i>
-                                                        <% } else if (i - producto.averageRating < 1 && i > producto.averageRating) { %>
-                                                            <i class="fa-regular fa-star-half-stroke"></i>
-                                                        <% } else { %>
-                                                            <i class="fa-regular fa-star"></i>
-                                                        <% } %>
-                                                    <% } %>
-                                                </div>
-                                                    <div class="product-btns">
-                                                        <button class="add-to-wishlist" 
-                                                        data-product-id="<%= producto.id %>" 
-                                                        data-product-color="<%= producto.color %>">
-                                                        <i class="fa-regular fa-heart"></i>  
-                                                        <span class="tooltipp">Favoritos</span>
-                                                        </button>
-                                                        
-                                                        <% if (producto.esMovil) { %>
-                                                        <button class="add-to-compare" data-id="<%= producto.id %>"><i class="fa-solid fa-arrow-right-arrow-left"></i>
-                                                        <span class="tooltipp">Comparar</span></button>
-                                                        <% } %>
-                                                    </div>
-                                                </div>
-                                                <div class="add-to-cart">
-                                        <button class="add-to-cart-btn"
+                                        <% 
+                                        const fechaCreacion = new Date(producto.fecha); 
+                                        const hoy = new Date();
+                                        const diferenciaDias = (hoy - fechaCreacion) / (1000 * 60 * 60 * 24);
+                                        if (diferenciaDias <= 30) { 
+                                        %>
+                                            <span class="new">Nuevo</span>
+                                        <% } %>
+                                    </div>
+                            </div>
+
+                            <div class="product-body">
+                                <p class="product-category"><%= producto.categoria || 'Sin categoría' %></p>
+                                <h3 class="product-name"><%= producto.nombre %> <%= producto.especificaciones %></h3>
+
+                                <h4 class="product-price">
+                                    $<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                    <% if (producto.descuento > 0) { %>
+                                        <del class="product-old-price">
+                                            $<%= Number(producto.precio / (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                        </del>
+                                    <% } %>
+                                </h4></a>
+
+                                <div class="product-rating">
+                                    <% for (let i = 1; i <= 5; i++) { %>
+                                        <% if (i <= Math.floor(producto.averageRating)) { %>
+                                            <i class="fa-solid fa-star"></i>
+                                        <% } else if (i - producto.averageRating < 1 && i > producto.averageRating) { %>
+                                            <i class="fa-regular fa-star-half-stroke"></i>
+                                        <% } else { %>
+                                            <i class="fa-regular fa-star"></i>
+                                        <% } %>
+                                    <% } %>
+                                </div>
+
+                                <div class="product-btns">
+                                    <button class="add-to-wishlist" 
+                                            data-product-id="<%= producto.id %>" 
+                                            data-product-color="<%= producto.color %>">
+                                        <i class="fa-regular fa-heart"></i>  
+                                        <span class="tooltipp">Favoritos</span>
+                                    </button>
+
+                                    <% if (producto.esMovil) { %>
+                                        <button class="add-to-compare" data-id="<%= producto.id %>">
+                                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                                            <span class="tooltipp">Comparar</span>
+                                        </button>
+                                    <% } %>
+                                </div>
+                            </div>
+
+                            <div class="add-to-cart">
+                                <button class="add-to-cart-btn"
                                         data-id="<%= producto.id %>"
                                         data-color="<%= producto.color %>"
                                         data-ram="<%= producto.ram %>"
@@ -569,20 +586,21 @@ document.querySelector(".tablink").click();
                                         data-nombre="<%= producto.nombre %>"
                                         data-precio="<%= producto.precio %>"
                                         data-imagen="<%= producto.imagen %>">
-                                        <i class="fa fa-shopping-cart"></i> Añadir al carrito
-                                        </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- /product -->
-                                        <% }); %> 
-                                        <% } else { %>
-                                            <p class="text-center">No hay productos recomendados en este momento.</p>
-                                            <% } %>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- /Section -->
+                                    <i class="fa fa-shopping-cart"></i> Añadir al carrito
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /product -->
+                <% }); %>
+            <% } else { %>
+                <p class="text-center">No hay productos recomendados en este momento.</p>
+            <% } %>
+        </div>
+    </div>
+</div>
+<!-- /Section -->
+
 
 <%- include('./partials/footer.ejs') %>
         
