--- a/src/views/store/clients/cart.ejs
+++ b/src/views/store/clients/cart.ejs
@@ -92,10 +92,10 @@
                                             <%= producto.nombre %> <%= producto.ram %> + <%= producto.almacenamiento %>
                                         </h3>
                                     <h4 class="product-price">
-                                        $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
-                                        <% if (producto.descuento > 0) { %>
-                                        <del class="product-old-price">$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
-                                        <% } %>
+									$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+									<% if (producto.descuento > 0) { %>
+										<del class="product-old-price">$<%= Number(producto.precio / (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
+									<% } %>
                                     </h4></a>
                                 </div>
                             </div>
