--- a/src/views/store/clients/store.ejs
+++ b/src/views/store/clients/store.ejs
@@ -181,10 +181,12 @@
 															<p class="product-category"><%= producto.categoria %></p>
 															<h3 class="product-name"><%= producto.nombre %> <%= producto.especificaciones %></h3>
 															<h4 class="product-price">
-																$<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
-																<% if (producto.descuento > 0) { %>
-																	<del class="product-old-price">$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
-																<% } %>
+															$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+															<% if (producto.descuento > 0) { %>
+																<del class="product-old-price">
+																	$<%= Number(producto.precio / (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+																</del>
+															<% } %>
 															</h4>
 															</a>
 															<div class="product-rating">
